objects/vlocity_ins__VlocityDataPack__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ActivationStatus__c</fullName>
        <label>Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AsyncApexJobId__c</fullName>
        <label>Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AsyncApexJobType__c</fullName>
        <label>Async Apex Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLastProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Last Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastProcessedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastProcessedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vlocity_Data_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastProcessedDateTime__c</fullName>
        <label>LastProcessedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryDataPackType__c</fullName>
        <label>Primary DataPack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity DataPack Object</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>vlocity_ins__Source__c</columns>
        <columns>vlocity_ins__Status__c</columns>
        <columns>vlocity_ins__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vlocity DataPack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DataPack Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>